[tool.poetry]
name = "python_poetry"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.3"
pandas = "^1.4.2"
matplotlib = "^3.5.1"
seaborn = "^0.11.2"
Pillow = "^9.1.0"
image = "^1.5.33"
ipykernel = "^6.13.0"
notebook = "^6.4.11"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
